added css folder

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Danyfer's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="images/dogge.jpg" alt="dogge picture"></td>
+      <td><img src="images/profile-picture.png" alt="profile picture"></td>
       <td>
         <h1>Danyfer Gutierrez</h1>
         <p>
@@ -54,7 +55,7 @@
   </table>
   <hr>
   <h3>My Skills</h3>
-  <table cellspacing = 10>
+  <table cellspacing=10>
     <tr>
       <td>JAVA</td>
       <td>⭐⭐⭐</td>
